syntax = "proto3";

package rpc.orchestrator;

option go_package = "pkg/rpc/orchestrator";

// OrchestratorService handles communication between workers and the orchestrator
service Orchestrator {
  // Worker lifecycle management
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc SendHeartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc Unregister(UnregisterRequest) returns (UnregisterResponse);
  rpc Ping(PingRequest) returns (PingResponse);
}

// Worker registration messages
message RegisterRequest {
  string worker_id = 1; // Unique identifier for the worker
  string worker_endpoint = 2; // gRPC endpoint of the worker
  int64 total_capacity = 3;
  int64 used_space = 4;
}

message RegisterResponse {
  bool success = 1; // Success bool
}

message HeartbeatRequest {
  string worker_id = 1; // Unique identifier for the worker
}

message HeartbeatResponse {
  bool success = 1;
  string message = 2;
}

message UnregisterRequest {
  string worker_id = 1; // Unique identifier for the worker
}

message UnregisterResponse {
  bool success = 1;
  string message = 2;
}

message PingRequest {
  string message = 1; // Ping message
}

message PingResponse {
  bool success = 1;
}